Dark mode fix

--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -25,6 +25,10 @@
 
 }
 
+.subTitle-experience {
+    color:black !important;
+}
+
 .greeting-main {
   display: flex;
 }
